fix(LeaderboardHeader): correct sticky top position so list items don't show behind header when scrolling

--- a/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderboardHeader/LeaderboardHeader.module.scss
+++ b/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderboardHeader/LeaderboardHeader.module.scss
@@ -8,7 +8,7 @@
   padding: 0 2px;
   padding-block: 1.5rem;
   position: sticky;
-  top: 89px;
+  top: 82px;
   left: 0;
   z-index: 10;
   background-color: #0e1217;
